tests/fixtures/invalid/len_bool.py
# Cannot call len() with Bool
x = len(True)
